# lirik-stats

./: .coveragerc  .gitignore  AGENTS.md  LICENSE  README.md  coverage.xml  main.py  pyproject.toml  pytest-coverage.txt  pytest.xml  ssh_sign_key  test.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  pull_lirik_plays_youtube_api_daily.yml  run_get_youtube_data_to_repo.yml
backend/: config.py  main.py  storage_service.py  youtube_api.py  youtube_client.py  youtube_service.py
backend/analyses/: eda.sql  youtube-api.ipynb
backend/pipelines/youtube_api/clean/: eda.sql
backend/pipelines/youtube_api/raw/: get_youtube_data_to_repo.py  utils.py
docs/: test_standards.md  todo.md
test/: conftest.py  test_cli.py  test_main.py  test_storage_service.py  test_youtube_api.py  test_youtube_client.py  test_youtube_service.py
youtube/: cli.py  config.py  models.py  storage_service.py  youtube_api.py  youtube_client.py  youtube_service.py
youtube/test/: test_youtube_api.py  test_youtube_client.py
